# Game

./: CMakeLists.txt  README.md
.cache/clangd/index/: Application.cpp.2A76D7D2C8838156.idx  Application.hpp.BB7D45C77A1B6507.idx  PushButton.cpp.80EE57A95C98EBAA.idx  PushButton.hpp.113DC06E817154BB.idx  SDL.h.BCE0C5B6106DC8FB.idx  SDL_assert.h.27F9C5AD010CB601.idx  SDL_atomic.h.A01F84DD3FFC5634.idx  SDL_audio.h.BABAB5FFE70B6B79.idx  SDL_blendmode.h.E57AF25191BCB19E.idx  SDL_clipboard.h.65E2EAD96A783354.idx  SDL_config.h.74186D530490F341.idx  SDL_cpuinfo.h.9022A2D3F6D402A9.idx  SDL_endian.h.2BBE24B525BBFB0B.idx  SDL_error.h.DEA19C953A1ACAD6.idx  SDL_events.h.34EEB26101AA8D77.idx  SDL_filesystem.h.8B224C3CEA70C16F.idx  SDL_gamecontroller.h.E37ADD41638EB119.idx  SDL_gesture.h.73493B73AEDBFFF5.idx  SDL_guid.h.9F0C8E2DB2A626F8.idx  SDL_haptic.h.D59D2E5858A9A3BB.idx  SDL_hidapi.h.FD9A4ADEFBE044DF.idx  SDL_hints.h.9817910BABF20DB6.idx  SDL_image.h.BFBF36CE61DB6E20.idx  SDL_joystick.h.5FE1DD3F191BAE49.idx  SDL_keyboard.h.ECCCCF8DC81FA558.idx  SDL_keycode.h.8E6C30914F48B933.idx  SDL_loadso.h.FC9AAE4F8C1FE035.idx  SDL_locale.h.9DAE7B1F45240FC3.idx  SDL_log.h.749B0C6EAA28F23B.idx  SDL_main.h.79A576A9D18EB619.idx  SDL_messagebox.h.BB0F5A176F58E69F.idx  SDL_metal.h.7FB639F27CD7A269.idx  SDL_misc.h.6FF63B89B691DF34.idx  SDL_mixer.h.E419CE30D28D8754.idx  SDL_mouse.h.3AD667F0526552F4.idx  SDL_mutex.h.306BA2B8E34DF83C.idx  SDL_pixels.h.A1B82BCC4967B697.idx  SDL_platform.h.4C031A089897BEC4.idx  SDL_power.h.53D3DE2063E9A016.idx  SDL_quit.h.3CD841F151A53446.idx  (+27 more)
Application/: Application.cpp  Application.hpp  CMakeLists.txt  FPSControler.cpp  FPSControler.hpp  Label.cpp  Label.hpp  PushButton.cpp  PushButton.hpp  Texture.cpp  Texture.hpp  Widget.cpp  Widget.hpp  WidgetMaker.cpp  WidgetMaker.hpp  button.hpp  tools.cpp  tools.hpp
Dependences/include/SDL2/: SDL_revision.h  _real_SDL_config.h
Dependences/lib/: libSDL2_ttf-2.0.so.0  libSDL_kitchensink.so.1.0.12
GameObject/: Barrier.cpp  Barrier.hpp  CMakeLists.txt  GameObject.cpp  GameObject.hpp  Role.cpp  Role.hpp
MusicPlayer/: CMakeLists.txt  MusicPlayer.cpp  MusicPlayer.hpp
OpenGL/: CMakeLists.txt
OpenGL/Dependences/include/glad/: glad.h
OpenGL/src/: Shader.hpp  glad.c  main.cpp
Rust/: Hello  Hello.rs  if  if.rs
Shall/: a.sed  s_01.sh  s_01.shback
Structure/Tree/: BinaryTree.cpp  BinaryTree.hpp  main.cpp
Structure/stack/: a.out  stack.cpp
pyCode/Learn_01/: hello.py
src/: main.cpp  mainApplication.cpp  mainApplication.hpp
src/gameWidget/: CMakeLists.txt  gameWidget.cpp  gameWidget.hpp
src/level/: CMakeLists.txt  level.cpp  level.hpp
src/levelSelectWidget/: CMakeLists.txt  levelSelectWidget.cpp  levelSelectWidget.hpp
src/mainApplication/: CMakeLists.txt  mainApplication.cpp  mainApplication.hpp
src/startMenuWidget/: CMakeLists.txt  startMenuWidget.cpp  startMenuWidget.hpp
test/: CMakeCache.txt  Makefile  cmake_install.cmake
test/Application/: Makefile  cmake_install.cmake
(+6 files in other folders)
